# fengni_minidemo

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  build.rs  build_log.txt  whisper.proto
src/: capi.rs  client.rs  critical_sender.rs  dynamic_framing.rs  framing.rs  lib.rs  logging.rs  server.rs
src/fec/: encoder.rs  frame.rs  mod.rs  reassembler.rs
src/stream/: manager.rs  mod.rs  pool.rs  scheduler.rs
tests/: integration_test.rs
